# tokenbound_impl

./: .gitignore  ARCHITECTURE.md  CLI.md  CONTRACT_CONFIG.md  DEPLOYMENT.md  ISSUE_190_TRACKING.md  ISSUE_225_TRACKING.md  README.md  TOKEN_BURNING_SECURITY_AUDIT.md  gas_estimation_commit_message.txt  package-lock.json  package.json
soroban-client/rust/: Cargo.toml  README.md
soroban-client/rust/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
soroban-client/rust/src/contracts/: event_manager.rs  marketplace.rs  mod.rs  poap_nft.rs  tba_account.rs  tba_registry.rs  ticket_factory.rs  ticket_nft.rs
soroban-client/rust/src/transport/: mock.rs  mod.rs
soroban-client/rust/tests/: event_manager.rs  marketplace.rs  retry_and_timeout.rs  tba_and_poap.rs  ticket_factory.rs
soroban-contract/: BEST_PRACTICES.md  Cargo.toml  MIGRATION_v25.md  QUICK_REFERENCE.md  README.md  REENTRANCY_SECURITY_AUDIT.md  UPGRADE_SUMMARY.md
soroban-contract/contracts/access_control/: Cargo.toml  README.md
soroban-contract/contracts/access_control/src/: lib.rs  rbac_integration.rs  test.rs
soroban-contract/contracts/access_control/test_snapshots/test/: test_get_account_roles.1.json  test_grant_role.1.json  test_initialize_fails_if_already_initialized.1.json  test_non_admin_cannot_grant_role.1.json  test_renounce_role.1.json  test_revoke_role.1.json  test_transfer_admin.1.json
soroban-contract/contracts/collections/: Cargo.toml
soroban-contract/contracts/collections/src/: enumerable_map.rs  enumerable_set.rs  lib.rs  storage_type.rs  test.rs
soroban-contract/contracts/collections/test_snapshots/test/: map_entries_instance.1.json  map_insert_and_get_instance.1.json  map_insert_and_remove_persistent.1.json  map_insert_update_instance.1.json  map_key_at_instance.1.json  map_keys_instance.1.json  map_length_instance.1.json  map_namespaces_are_isolated.1.json  map_remove_instance.1.json  map_remove_middle_swap_correctness_instance.1.json  map_values_instance.1.json  set_at_instance.1.json  set_insert_and_contains_instance.1.json  (+11 more)
soroban-contract/contracts/dao_governance/: Cargo.toml  README.md
soroban-contract/contracts/dao_governance/src/: fuzz.rs  lib.rs  test.rs
soroban-contract/contracts/deployer_registry/: Cargo.toml
soroban-contract/contracts/deployer_registry/src/: lib.rs  test.rs
soroban-contract/contracts/erc721_traits/: Cargo.toml  README.md
soroban-contract/contracts/erc721_traits/src/: lib.rs
soroban-contract/contracts/escrow/: Cargo.toml
soroban-contract/contracts/escrow/src/: lib.rs  test.rs
soroban-contract/contracts/event_manager/: Cargo.toml
soroban-contract/contracts/event_manager/proptest-regressions/: fuzz.txt
soroban-contract/contracts/event_manager/src/: EventDAppDemo.tsx  fee.rs  fee_test.rs  fuzz.rs  lib.rs  test.rs
soroban-contract/contracts/feature_flagging/: Cargo.toml  README.md
soroban-contract/contracts/feature_flagging/src/: lib.rs
soroban-contract/contracts/fuzz_helpers/: Cargo.toml
soroban-contract/contracts/fuzz_helpers/src/: harness.rs  lib.rs
soroban-contract/contracts/fuzz_helpers/tests/: harness_template.rs
soroban-contract/contracts/marketplace/: ROYALTY_SYSTEM.md
soroban-contract/contracts/marketplace/src/: lib.rs  test_royalty.rs
soroban-contract/contracts/merkle_distributor/: Cargo.toml
soroban-contract/contracts/merkle_distributor/src/: lib.rs  test.rs
soroban-contract/contracts/multi_admin/: Cargo.toml
soroban-contract/contracts/multi_admin/src/: lib.rs  test.rs
soroban-contract/contracts/nonce_manager/: Cargo.toml
soroban-contract/contracts/nonce_manager/src/: lib.rs
soroban-contract/contracts/payment_splitter/: Cargo.toml
soroban-contract/contracts/payment_splitter/src/: lib.rs  test.rs
soroban-contract/contracts/permit_wallet/: Cargo.toml
soroban-contract/contracts/permit_wallet/src/: lib.rs  test.rs
soroban-contract/contracts/poap_nft/: Cargo.toml
soroban-contract/contracts/poap_nft/src/: lib.rs  test.rs
soroban-contract/contracts/reentrancy_guard/: Cargo.toml
soroban-contract/contracts/reentrancy_guard/src/: lib.rs  test.rs
soroban-contract/contracts/tba_account/: Cargo.toml
soroban-contract/contracts/tba_account/examples/: refund_integration.rs
soroban-contract/contracts/tba_account/src/: asset_transfer.rs  asset_transfer_test.rs  lib.rs  test.rs
soroban-contract/contracts/tba_registry/src/: lib.rs  test.rs
soroban-contract/contracts/tba_registry/test_snapshots/: test_integration_flow.1.json
soroban-contract/contracts/tba_registry/tests/: integration_test.rs
soroban-contract/contracts/ticket_factory/src/: lib.rs  test.rs
soroban-contract/contracts/ticket_nft/: Cargo.toml
soroban-contract/contracts/ticket_nft/src/: fuzz.rs  lib.rs  test.rs
soroban-contract/contracts/upgradeable/src/: lib.rs  test.rs
soroban-contract/contracts/upgradeable_reference/: Cargo.toml
soroban-contract/contracts/upgradeable_reference/src/: lib.rs  test.rs
soroban-contract/contracts/vesting/: Cargo.toml
soroban-contract/contracts/vesting/src/: lib.rs  test.rs
soroban-contract/coverage/: lcov.info
soroban-contract/docs/: event-schemas.md  multi-admin.md  reentrancy-guard.md  storage-ttl-optimization.md  upgradeable-pattern.md
soroban-contract/scripts/: clean-deployment.sh  config.example.sh  deploy-v2.sh  deploy.sh  list-deployments.sh  network-info.sh  quick-start.sh  verify-deployment.sh
soroban-contract/scripts/lib/: config.sh  contract.sh  identity.sh  logger.sh  network.sh
soroban-contract/tests/integration/src/: lib.rs
soroban-contract/tests/integration/test_snapshots/: test_cancel_event_and_claim_refund.1.json  test_create_tba_and_execute_through_it.1.json  test_double_refund_fails.1.json  test_factory_tracks_deployed_contracts.1.json  test_full_happy_path_purchase_and_create_tba.1.json  test_purchase_canceled_event_fails.1.json  test_purchase_sold_out_event.1.json  test_refund_fails_for_non_buyer.1.json  test_refund_fails_if_event_not_canceled.1.json  test_transfer_ticket_and_new_owner_creates_tba.1.json
(+370 files in other folders)
