[package]
name = "tba_account"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
nonce_manager = { path = "../nonce_manager" }
upgradeable = { path = "../upgradeable" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
